# labPWP

./: README.md
src/: CMakeLists.txt  main.cpp
src/Trygonometria/: CMakeLists.txt  Trygonometria_Export.h  trygonometria.cpp  trygonometria.h
